<resources>
    <string name="app_name">My Friends Hangout App</string>
    <string name="login_button">login</string>
    <string name="password_text_input_layout">password</string>
    <string name="login_text_view">login</string>
    <string name="forgot_password_text_view">forgot info?</string>
    <string name="register_text_view">register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_text_input_layout">enter email</string>
    <string name="send_email_button">send email</string>
    <string name="register_button">register</string>
    <string name="confirm_password_text_input_layout">confirm password</string>
    <string name="email_text_input_layout">email</string>
    <string name="username_text_input_layout">username</string>
    <string name="last_name_text_input_layout">last name</string>
    <string name="first_name_text_input_layout">first name</string>
    <string name="friends">Friends</string>
    <string name="me">Me</string>
    <string name="inside_user_fragment">INSIDE USER FRAGMENT!</string>
    <string name="inside_friends_list">INSIDE FRIENDS LIST!</string>
    <string name="logout">logout</string>
</resources>